--- a/stonemill/.build/breadcategory/index.html
+++ b/stonemill/.build/breadcategory/index.html
@@ -102,6 +102,8 @@
 
     <!-- build:css /static/css/minified.css -->
     <link rel="stylesheet" href="/static/css/app.css"/>
+    <link rel="stylesheet" href="/static/css/featherlight.css"/>
+
     <link rel="stylesheet" href="/static/css/main.css"/>
     <link rel="stylesheet" href="/static/css/wysiwyg_figures.css"/>
     <!-- endbuild -->
@@ -163,6 +165,7 @@
       <!-- build:js /static/javascript/minified.js -->
         <script src="/static/javascript/bootstrap/bootstrap.js"></script>
         <script src="/static/javascript/main.js"></script>
+        <script src="/static/javascript/featherlight.js"></script>
       <!-- endbuild -->
 
       
