--- a/stonemill/pages/index.html
+++ b/stonemill/pages/index.html
@@ -22,7 +22,7 @@
   <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-4 text-center">
-			<a onclick="$('.bread-filters').slideDown(); $grid.isotope({ filter: '.bread-item, .breadcategory-item' });">Bread</a>
+			<a onclick="breadFilter('.bread-item, .breadfamily-item');">Bread</a>
 		</div>
 		<div class="col-md-4 text-center">
 			<a onclick="$('.bread-filters').slideUp(); $grid.isotope({ filter: '*' });">See All</a>
@@ -33,48 +33,56 @@
 		</div>
 	</div>
 	<div class="row bread-filters">
-		{% for cat in cms.breadcategory %}
+		{% for cat in cms.breadfamily %}
 		<div class="col-md-3 text-center">
-			<a onclick="$grid.isotope({ filter: '.{{cat.name}}' });">{{ cat.name_of_bread_category}}</a>
+			<a onclick="$grid.isotope({ filter: '.{{cat.name}}' });">{{ cat.name_of_bread_family}}</a>
 		</div>
 		{% endfor %}
 	</div>
     <div class="row">
       <div class="col-md-12">
-
-        
-
-  
 			<div class="grid">
-			{% for item in merge(cms.text, cms.breadcategory) %}
-			{% set blank = random([0,1,1,1,0]) %}
+			{% for item in merge(cms.text, cms.breadfamily) %}
+			{% set blank = random([1,1,1,0]) %}
 				{% if blank==1 %}
-					<div class="grid-item">
-						&nbsp;
+					<div class="grid-item text-center">
+			            <div class="overlay">
+						<img src="{{ random(cms.emptyspace).gif_nonactive|imageCrop(800,800)  }}">
+			            </div>
+							<img src="{{ random(cms.emptyspace).gif_activeonhover|imageCrop(800,800)  }}">
 					</div>
 				{% endif %}
-				{% if item._type == 'breadcategory' %}
-					<div class="text-center grid-item bread-item {{item.name}}" data-category="{{item.name}}">
-			            <div class="overlay">
-				            <img src="{{ item.thumbnail|imageCrop(250,250) }}">
-				            <div class="text"><a href="{{url(item)}}">{{ item.name_of_bread_category }}</a></div>
-			            </div>
+				{% if item._type == 'breadfamily' %}
+					<div class="text-center grid-item large bread-item {{item.name}}" data-category="{{item.name}}">
+				            <a onclick="breadFilter('.{{ item.name  }}');">
+					            <div class="overlay">
+						            <div class="text">{{ item.name_of_bread_family }}</div>
+					            </div>
+									<img src="{{ item.thumbnail|imageCrop(800,800) }}">
+					        </a>
 			        </div>
+
 			        {% for bread in item.breads %}
 						<div class="text-center grid-item bread-item {{item.name}}" data-category="{{item.name}}">
-					            <div class="overlay">
-						            <img src="{{ bread.thumbnail|imageCrop(250,250) }}">
-						            <div class="text"><a href="{{url(bread)}}">{{ bread.name }}</a></div>
-					            </div>
+					            <a href="#" data-featherlight="{{ url(bread) }}">
+						            <div class="overlay">
+							            <img src="{{ bread.thumbnail|imageCrop(400,400) }}">
+							            <div class="text">{{ bread.name }}</div>
+						            </div>
+							        	<img src="{{ bread.thumbnail|imageCrop(400,400) }}">
+								</a>
 				        </div>
 					{% endfor %}
 					
 				{% else %}
 				<div class="text-center grid-item {{item._type}}-item ">
-		            <div class="overlay">
-			            <img src="{{ item.thumbnail|imageCrop(250,250) }}">
-			            <div class="text"><a href="{{url(item)}}">{{ item.name }}</a></div>
-		            </div>
+		            <a href="#" data-featherlight="{{ url(item) }}">
+			            <div class="overlay">
+				            <div class="text">{{ item.name }}</div>
+			            </div>
+			            <img src="{{ item.thumbnail|imageCrop(400,400) }}">
+		            </a>
+
 	        	</div>
 				{% endif %}
           {% endfor %}
